# insights

./: .env.example  .gitattributes  .gitignore  README.md  Untitled.ipynb  funding.json  ossdirectory-quickstart.ipynb  producer-trino.ipynb  pyoso-quickstart.ipynb  pyproject.toml  quickstart.ipynb
analysis/octant/longitudinal-tracking/: .env.example  .gitignore  octant-longitudinal-tracking.py  octant-portfolio-health-feedback.md  octant-portfolio-health.py  pyproject.toml
analysis/optimism/s7/: .gitignore  20250401_ProjectDebugging.ipynb  20250404_RF3vS7_Comparison.ipynb  20250404_Results.ipynb  20250406_M1_RewardsByChain.ipynb  20250407_DownstreamGas.ipynb  20250508_AddressLabels.ipynb  20250516_MetricsQA.ipynb  20250808_MiniAppDAUsVsFunding.ipynb  S7_DevTools_PreliminaryImpactAnalysis.ipynb  S7_OnchainBuilders_PreliminaryImpactAnalysis.ipynb  S7_TrinoModels.ipynb  SBOM_OpenQ_Diff.ipynb  TVL Debugging.ipynb  defillama_assets.ipynb  defillama_enriched_tvl.py  defillama_protocols.ipynb  defillama_protocols.py  defillama_sql_generator.py  gas_cap_analysis.ipynb  github_check.py  op_atlas_tracker.ipynb  oso_api_guide.md  pyproject.toml  s7_onchain_builder_eligibility.ipynb  s7_stats.ipynb  wip_GasByChainAllocations.ipynb
analysis/optimism/s7/M1/: S7_M1_ConsolidatedRewards.ipynb  S7_M1_DownstreamGas.ipynb  S7_M1_OnchainBuilders.ipynb  S7_M1_OnchainBuilders_InkProject.ipynb  m1_consolidated_rewards.csv
analysis/optimism/s7/M5/: analyze.py  dependency_coverage_analysis.csv  dependency_coverage_detailed.csv  direct_dependencies.csv  lookup.py  m5_dependencies.csv  transitive.py
analysis/optimism/s7/data/: 20250303_project_repos.csv  20250303_project_repos_reviewed.csv  20250305_onchain_builders_eligibility.csv  20250305_onchain_builders_initial_eligibility_checks.csv  20250306_repos_to_add.csv  20250306_repos_to_add.json  20250714_deduped_devs.parquet  20250714_s7_devtool_metrics.parquet  20250714_s7_downstream_gasfees.parquet  20250714_s7_onchain_builder_gasfees.parquet  20250714_s7_onchain_builder_gasfees_all.parquet  20250714_superchain_gasfees.parquet  defillama_metrics.csv  defillama_token_listings.csv  devtooling_oso_mappings.json  enriched_tvl_events.parquet  onchain_builder_oso_mappings.json
analysis/optimism/s7/gc-impact-analysis/: S7-Observational-Impact-Analysis.py  s7_grants_council.csv
community/ddp/: .env.example  .gitignore  README.md  publications.py  pyproject.toml  quick-start.py  serve_notebooks.py
community/ddp/app/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
community/ddp/app/app/: globals.css  layout.tsx  page.tsx
community/ddp/app/components/: MarimoIframe.tsx  Sidebar.tsx
community/ddp/data/: agent-workflows.py
community/ddp/data/metric-definitions/: activity.py  alignment.py
community/ddp/data/models/: events.py  repositories.py
community/ddp/data/sources/: oss-directory.py
community/ddp/docs/plans/: 2026-02-17-insights-notebooks-polish-design.md  2026-02-17-notebooks-polish.md
community/ddp/insights/: developer-lifecycle.py
community/ddp/notebooks/: agent-guide.py  claude.md  home.py  publications.py  quick-start.py
community/ddp/notebooks/insights/: defi-developer-journeys.py  developer-activity.py  developer-lifecycle.py  developer-report-2025.py  developer-retention.py  speedrun-ethereum.py
experiments/S7_test_algos/: pyproject.toml
experiments/S7_test_algos/data/devtooling_testing/: devtooling_openrank_results.csv  devtooling_projects.csv  onchain_projects.csv  project_dependencies.csv  value_flow_sankey.csv
experiments/S7_test_algos/models/: devtooling_openrank.py  onchain_builders.py
experiments/S7_test_algos/weights/: devtooling_openrank_testing.yaml  onchain_builders_testing.yaml
experiments/dependency-graph-gg24/: .gitignore  README.md  depedency-graph.py  pyproject.toml
experiments/dependency-graph-gg24/data/: seedRepos.json  seedReposWithDependencies.json
experiments/dependency-graph-gg24/src/: dependencies.py  local_parser.py  process_missing_repos.py  process_problematic_repos.py  retry_incomplete.py  scan_and_retry.py
experiments/dependency-graph-v2/: .env.example  .gitignore  LICENSE  README.md  RESTRUCTURE_SUMMARY.md  pipeline_config.json  pyproject.toml
experiments/dependency-graph-v2/data/: package_github_mappings.csv  repository_sources.json
experiments/dependency-graph-v2/output/: dependencies.json  dependencies_with_github_limited.json  dependency_snapshot.json  repo_status.txt
experiments/ethereum-repo-clusters/: .gitignore  CategorySummary.ipynb  README.md  pipeline_config.json  pyproject.toml
experiments/ethereum-repo-clusters/ethereum-repo-clusters/: __main__.py
experiments/ethereum-repo-clusters/results/: ethereum_repo_categories_v1.parquet  ethereum_repo_categories_v2.parquet
(+1398 files in other folders)
