[project]
name = "insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "google-cloud-bigquery>=3.37.0",
    "google-genai>=1.36.0",
    "marimo>=0.15.3",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pyoso>=0.6.5",
    "pysyncon>=1.5.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "trino>=0.336.0",
    "vega-datasets>=0.9.0",
    "web3>=7.13.0",
]

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]