[project]
name = "ethereum-developer-data-portal"
version = "0.1.0"
description = "Ethereum Developer Data Portal - Dashboard for serving marimo notebooks"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.15.3",
    "uvicorn>=0.30.0",
    "pyoso>=0.8.0",
    "plotly>=6.5.0",
    "pillow>=12.1.1",
    "matplotlib>=3.10.8",
    "wordcloud>=1.9.6",
    "jinja2>=3.1.6",
]

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]

[dependency-groups]
dev = [
    "playwright",
]
