[project]
name = "dependency-graph-gg24"
version = "0.1.0"
description = "Dependency graph analysis for GG24 seed repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyoso>=0.4.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "pyyaml>=6.0.3",
    "marimo>=0.18.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

