[tool.poetry]
name = "ethereum-repo-clusters"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
requests = "^2.32.4"
pyoso = "^0.5.1"
google-generativeai = "^0.8.5"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
click = "^8.2.1"
pyarrow = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
