[tool.poetry]
name = "defillama-tvl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.22.0"
pandas = "^2.2.3"
requests = "^2.32.3"
githubkit = "^0.12.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
